--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Aspartame-s/Refactoring-Wheel-2022.git/issues"
   },
-  "homepage": "https://github.com/Aspartame-s/Refactoring-Wheel-2022.git#readme"
+  "homepage": "https://github.com/Aspartame-s/Refactoring-Wheel-2022.git#readme",
+  "dependencies": {
+    "vue": "^2.6.14"
+  }
 }
